Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -696,20 +696,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "near \"SORT\": syntax error",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-27-37cf7d9c7f27>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m             \u001b[0mJOIN\u001b[0m \u001b[0morderdetails\u001b[0m \u001b[0mUSING\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0morderNumber\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m             \u001b[0mWHERE\u001b[0m \u001b[0mquantityOrdered\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m30\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m             SORT BY quantityOrderes ASC\"\"\").head()\n\u001b[0m",
-      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/tpclean/tpclean.py\u001b[0m in \u001b[0;36msql\u001b[0;34m(querry, cursor, df_return, verbose)\u001b[0m\n\u001b[1;32m     53\u001b[0m             \"Provide cursor variable or Run tp.sql_conncet('database') to define cursor and make sure you dont have a Variable called <c>\")\n\u001b[1;32m     54\u001b[0m         \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 55\u001b[0;31m     \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquerry\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     56\u001b[0m     \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdf_return\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOperationalError\u001b[0m: near \"SORT\": syntax error"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customerName</th>\n",
+       "      <th>customerNumber</th>\n",
+       "      <th>orderNumber</th>\n",
+       "      <th>status</th>\n",
+       "      <th>quantityOrdered</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Extreme Desk Decorations, Ltd</td>\n",
+       "      <td>412</td>\n",
+       "      <td>10418</td>\n",
+       "      <td>Shipped</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Salzburg Collectables</td>\n",
+       "      <td>382</td>\n",
+       "      <td>10419</td>\n",
+       "      <td>Shipped</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Petit Auto</td>\n",
+       "      <td>314</td>\n",
+       "      <td>10423</td>\n",
+       "      <td>In Process</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Tekni Collectables Inc.</td>\n",
+       "      <td>328</td>\n",
+       "      <td>10401</td>\n",
+       "      <td>On Hold</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>La Rochelle Gifts</td>\n",
+       "      <td>119</td>\n",
+       "      <td>10425</td>\n",
+       "      <td>In Process</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    customerName customerNumber orderNumber      status  \\\n",
+       "0  Extreme Desk Decorations, Ltd            412       10418     Shipped   \n",
+       "1          Salzburg Collectables            382       10419     Shipped   \n",
+       "2                     Petit Auto            314       10423  In Process   \n",
+       "3        Tekni Collectables Inc.            328       10401     On Hold   \n",
+       "4              La Rochelle Gifts            119       10425  In Process   \n",
+       "\n",
+       "  quantityOrdered  \n",
+       "0              10  \n",
+       "1              10  \n",
+       "2              10  \n",
+       "3              11  \n",
+       "4              11  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -717,7 +798,7 @@
     "            FROM customers JOIN orders USING(customerNumber)\n",
     "            JOIN orderdetails USING (orderNumber)\n",
     "            WHERE quantityOrdered >= 30\n",
-    "            O BY quantityOrderes ASC\"\"\").head()"
+    "            ORDER BY quantityOrdered ASC\"\"\").head()"
    ]
   },
   {
