Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -797,7 +797,7 @@
     "tp.sql(\"\"\"SELECT customerName, customerNumber, orderNumber, status, quantityOrdered\n",
     "            FROM customers JOIN orders USING(customerNumber)\n",
     "            JOIN orderdetails USING (orderNumber)\n",
-    "            GROUP BY \n",
+    "            GROUP BY customerName\n",
     "            WHERE quantityOrdered >= 30\n",
     "            ORDER BY quantityOrdered ASC\"\"\").head()"
    ]
