--- a/index.ipynb
+++ b/index.ipynb
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -730,65 +730,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Extreme Desk Decorations, Ltd</td>\n",
-       "      <td>412</td>\n",
-       "      <td>10418</td>\n",
+       "      <td>Tokyo Collectables, Ltd</td>\n",
+       "      <td>398</td>\n",
+       "      <td>10408</td>\n",
        "      <td>Shipped</td>\n",
-       "      <td>10</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Salzburg Collectables</td>\n",
-       "      <td>382</td>\n",
-       "      <td>10419</td>\n",
-       "      <td>Shipped</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>Petit Auto</td>\n",
        "      <td>314</td>\n",
        "      <td>10423</td>\n",
        "      <td>In Process</td>\n",
-       "      <td>10</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Frau da Collezione</td>\n",
+       "      <td>473</td>\n",
+       "      <td>10218</td>\n",
+       "      <td>Shipped</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Tekni Collectables Inc.</td>\n",
-       "      <td>328</td>\n",
-       "      <td>10401</td>\n",
-       "      <td>On Hold</td>\n",
-       "      <td>11</td>\n",
+       "      <td>Boards &amp; Toys Co.</td>\n",
+       "      <td>219</td>\n",
+       "      <td>10376</td>\n",
+       "      <td>Shipped</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>La Rochelle Gifts</td>\n",
-       "      <td>119</td>\n",
-       "      <td>10425</td>\n",
-       "      <td>In Process</td>\n",
-       "      <td>11</td>\n",
+       "      <td>Clover Collections, Co.</td>\n",
+       "      <td>189</td>\n",
+       "      <td>10297</td>\n",
+       "      <td>Shipped</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    customerName customerNumber orderNumber      status  \\\n",
-       "0  Extreme Desk Decorations, Ltd            412       10418     Shipped   \n",
-       "1          Salzburg Collectables            382       10419     Shipped   \n",
-       "2                     Petit Auto            314       10423  In Process   \n",
-       "3        Tekni Collectables Inc.            328       10401     On Hold   \n",
-       "4              La Rochelle Gifts            119       10425  In Process   \n",
+       "              customerName customerNumber orderNumber      status  \\\n",
+       "0  Tokyo Collectables, Ltd            398       10408     Shipped   \n",
+       "1               Petit Auto            314       10423  In Process   \n",
+       "2       Frau da Collezione            473       10218     Shipped   \n",
+       "3        Boards & Toys Co.            219       10376     Shipped   \n",
+       "4  Clover Collections, Co.            189       10297     Shipped   \n",
        "\n",
        "  quantityOrdered  \n",
-       "0              10  \n",
-       "1              10  \n",
-       "2              10  \n",
-       "3              11  \n",
-       "4              11  "
+       "0              15  \n",
+       "1              31  \n",
+       "2              34  \n",
+       "3              35  \n",
+       "4              35  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +798,7 @@
     "            FROM customers JOIN orders USING(customerNumber)\n",
     "            JOIN orderdetails USING (orderNumber)\n",
     "            GROUP BY customerName\n",
-    "            WHERE quantityOrdered >= 30\n",
+    "            HAVING quantityOrdered >= 30\n",
     "            ORDER BY quantityOrdered ASC\"\"\").head()"
    ]
   },
