Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
        "4              35  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +798,7 @@
     "            FROM customers JOIN orders USING(customerNumber)\n",
     "            JOIN orderdetails USING (orderNumber)\n",
     "            GROUP BY customerName\n",
-    "            HAVING quantityOrdered >= 30\n",
+    "            HAVING quantityOrdered > 30\n",
     "            ORDER BY quantityOrdered ASC\"\"\").head()"
    ]
   },
