--- a/index.ipynb
+++ b/index.ipynb
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -754,17 +754,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Boards &amp; Toys Co.</td>\n",
-       "      <td>219</td>\n",
-       "      <td>10376</td>\n",
+       "      <td>Clover Collections, Co.</td>\n",
+       "      <td>189</td>\n",
+       "      <td>10297</td>\n",
        "      <td>Shipped</td>\n",
        "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Clover Collections, Co.</td>\n",
-       "      <td>189</td>\n",
-       "      <td>10297</td>\n",
+       "      <td>Boards &amp; Toys Co.</td>\n",
+       "      <td>219</td>\n",
+       "      <td>10376</td>\n",
        "      <td>Shipped</td>\n",
        "      <td>35</td>\n",
        "    </tr>\n",
@@ -777,8 +777,8 @@
        "0  Tokyo Collectables, Ltd            398       10408     Shipped   \n",
        "1               Petit Auto            314       10423  In Process   \n",
        "2       Frau da Collezione            473       10218     Shipped   \n",
-       "3        Boards & Toys Co.            219       10376     Shipped   \n",
-       "4  Clover Collections, Co.            189       10297     Shipped   \n",
+       "3  Clover Collections, Co.            189       10297     Shipped   \n",
+       "4        Boards & Toys Co.            219       10376     Shipped   \n",
        "\n",
        "  quantityOrdered  \n",
        "0              15  \n",
@@ -788,7 +788,7 @@
        "4              35  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
     "tp.sql(\"\"\"SELECT customerName, customerNumber, orderNumber, status, quantityOrdered\n",
     "            FROM customers JOIN orders USING(customerNumber)\n",
     "            JOIN orderdetails USING (orderNumber)\n",
-    "            GROUP BY customerName\n",
+    "            GROUP BY customerNumber\n",
     "            HAVING quantityOrdered > 30\n",
     "            ORDER BY quantityOrdered ASC\"\"\").head()"
    ]
