--- a/index.ipynb
+++ b/index.ipynb
@@ -820,7 +820,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tp.sql(\"\"\"SELECT customerName, customerNumber, orderNumber, status, quantityOrdered\n",
+    "            FROM customers JOIN orders USING(customerNumber)\n",
+    "            JOIN orderdetails USING (orderNumber)\n",
+    "            GROUP BY customerNumber\n",
+    "            HAVING quantityOrdered > 30\n",
+    "            ORDER BY quantityOrdered ASC\"\"\").head()"
+   ]
   },
   {
    "cell_type": "markdown",
