--- a/index.ipynb
+++ b/index.ipynb
@@ -821,7 +821,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tp.sql(\"\"\"SELECT customerName, customerNumber, orderNumber, status, quantityOrdered\n",
+    "tp.sql(\"\"\"SELECT firstName, customerNumber, orderNumber, status, quantityOrdered\n",
     "            FROM customers JOIN orders USING(customerNumber)\n",
     "            JOIN orderdetails USING (orderNumber)\n",
     "            GROUP BY customerNumber\n",
