--- a/index.ipynb
+++ b/index.ipynb
@@ -822,7 +822,7 @@
    "outputs": [],
    "source": [
     "tp.sql(\"\"\"SELECT firstName, lastName, employeeNumber, officeCode\n",
-    "            FROM customers JOIN orders USING(customerNumber)\n",
+    "            FROM employees JOIN orders USING(customerNumber)\n",
     "            JOIN orderdetails USING (orderNumber)\n",
     "            GROUP BY customerNumber\n",
     "            HAVING quantityOrdered > 30\n",
