Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -822,7 +822,9 @@
    "outputs": [],
    "source": [
     "tp.sql(\"\"\"SELECT firstName, lastName, employeeNumber, officeCode\n",
-    "            FROM employes JOIN orders USING(customerNumber)\n",
+    "            FROM employes JOIN (\n",
+    "            )\n",
+    "            USING(customerNumber)\n",
     "            JOIN orderdetails USING (orderNumber)\n",
     "            GROUP BY customerNumber\n",
     "            HAVING quantityOrdered > 30\n",
