Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -837,7 +837,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tp.sql(\"\"\"select office\"\"\")"
+    "tp.sql(\"\"\"select officeCode, \"\"\")"
    ]
   },
   {
