--- a/index.ipynb
+++ b/index.ipynb
@@ -837,7 +837,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tp.sql(\"\"\"select officeCode, COUNT(employeeNu)\"\"\")"
+    "tp.sql(\"\"\"select officeCode, COUNT(employeeNumer)\"\"\")"
    ]
   },
   {
