Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -837,7 +837,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tp.sql(\"\"\"select officeCode, COUNT(employeeNumer)\"\"\")"
+    "tp.sql(\"\"\"select officeCode, COUNT(employeeNumer)\n",
+    "        FROM \"\"\")"
    ]
   },
   {
