--- a/index.ipynb
+++ b/index.ipynb
@@ -838,7 +838,7 @@
    "outputs": [],
    "source": [
     "tp.sql(\"\"\"select officeCode, COUNT(employeeNumer)\n",
-    "        FROM \"\"\")"
+    "        FROM employees JOIN offices\"\"\")"
    ]
   },
   {
