Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -838,7 +838,8 @@
    "outputs": [],
    "source": [
     "tp.sql(\"\"\"select officeCode, COUNT(employeeNumer)\n",
-    "        FROM employees JOIN offices USING(officeCode)\"\"\")"
+    "        FROM employees JOIN offices USING(officeCode)\n",
+    "        \"\"\")"
    ]
   },
   {
