Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -839,7 +839,7 @@
    "source": [
     "tp.sql(\"\"\"select officeCode, COUNT(employeeNumer)\n",
     "        FROM employees JOIN offices USING(officeCode)\n",
-    "        \"\"\")"
+    "        GROUP BY ()\"\"\")"
    ]
   },
   {
