Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -918,9 +918,10 @@
     }
    ],
    "source": [
-    "tp.sql(\"\"\"select officeCode, COUNT(employeeNumber)\n",
+    "tp.sql(\"\"\"select officeCode, COUNT(employeeNumber) as \n",
     "        FROM employees JOIN offices USING(officeCode)\n",
-    "        GROUP BY (officeCode)\"\"\")"
+    "        GROUP BY (officeCode)\n",
+    "        HAVING\"\"\")"
    ]
   },
   {
