Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -918,7 +918,7 @@
     }
    ],
    "source": [
-    "tp.sql(\"\"\"select officeCode, COUNT(employeeNumber) as \n",
+    "tp.sql(\"\"\"select officeCode, COUNT(employeeNumber) as Wor\n",
     "        FROM employees JOIN offices USING(officeCode)\n",
     "        GROUP BY (officeCode)\n",
     "        HAVING\"\"\")"
