Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -853,7 +853,7 @@
     "tp.sql(\"\"\"select officeCode, COUNT(employeeNumber) as Workers\n",
     "        FROM employees JOIN offices USING(officeCode)\n",
     "        GROUP BY (officeCode)\n",
-    "        HAVING\"\"\")"
+    "        HAVING Workers\"\"\")"
    ]
   },
   {
