Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -823,7 +823,10 @@
    "source": [
     "tp.sql(\"\"\"SELECT firstName, lastName, employeeNumber, officeCode\n",
     "            FROM employes JOIN (\n",
-    "            )\n",
+    "            select officeCode, COUNT(employeeNumber) as Workers\n",
+    "        FROM employees JOIN offices USING(officeCode)\n",
+    "        GROUP BY (officeCode)\n",
+    "        HAVING Workers <5)\n",
     "            USING(customerNumber)\n",
     "            JOIN orderdetails USING (orderNumber)\n",
     "            GROUP BY customerNumber\n",
