--- a/index.ipynb
+++ b/index.ipynb
@@ -827,7 +827,7 @@
     "        FROM employees JOIN offices USING(officeCode)\n",
     "        GROUP BY (officeCode)\n",
     "        HAVING Workers <5)\n",
-    "            USING(customerNumber)\n",
+    "            USING(officeCode)\n",
     "            JOIN orderdetails USING (orderNumber)\n",
     "            GROUP BY customerNumber\n",
     "            HAVING quantityOrdered > 30\n",
