--- a/index.ipynb
+++ b/index.ipynb
@@ -828,10 +828,7 @@
     "        GROUP BY (officeCode)\n",
     "        HAVING Workers <5)\n",
     "            USING(officeCode)\n",
-    "            JOIN orderdetails USING (orderNumber)\n",
-    "            GROUP BY customerNumber\n",
-    "            HAVING quantityOrdered > 30\n",
-    "            ORDER BY quantityOrdered ASC\"\"\").head()"
+    "            \"\"\").head()"
    ]
   },
   {
