Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -883,20 +883,76 @@
        "      <td>1323</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Larry</td>\n",
+       "      <td>Bott</td>\n",
+       "      <td>1501</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Barry</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>1504</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Andy</td>\n",
+       "      <td>Fixter</td>\n",
+       "      <td>1611</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Peter</td>\n",
+       "      <td>Marsh</td>\n",
+       "      <td>1612</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Tom</td>\n",
+       "      <td>King</td>\n",
+       "      <td>1619</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Mami</td>\n",
+       "      <td>Nishi</td>\n",
+       "      <td>1621</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Yoshimi</td>\n",
+       "      <td>Kato</td>\n",
+       "      <td>1625</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  firstName   lastName employeeNumber officeCode\n",
-       "0   William  Patterson           1088          6\n",
-       "1     Julie   Firrelli           1188          2\n",
-       "2     Steve  Patterson           1216          2\n",
-       "3  Foon Yue      Tseng           1286          3\n",
-       "4    George     Vanauf           1323          3"
+       "   firstName   lastName employeeNumber officeCode\n",
+       "0    William  Patterson           1088          6\n",
+       "1      Julie   Firrelli           1188          2\n",
+       "2      Steve  Patterson           1216          2\n",
+       "3   Foon Yue      Tseng           1286          3\n",
+       "4     George     Vanauf           1323          3\n",
+       "5      Larry       Bott           1501          7\n",
+       "6      Barry      Jones           1504          7\n",
+       "7       Andy     Fixter           1611          6\n",
+       "8      Peter      Marsh           1612          6\n",
+       "9        Tom       King           1619          6\n",
+       "10      Mami      Nishi           1621          5\n",
+       "11   Yoshimi       Kato           1625          5"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +965,7 @@
     "                                GROUP BY (officeCode)\n",
     "                                HAVING Workers <5)\n",
     "            USING(officeCode)\n",
-    "            \"\"\").head()"
+    "            \"\"\")"
    ]
   },
   {
