Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -965,7 +965,7 @@
     "                                GROUP BY (officeCode)\n",
     "                                HAVING Workers <5)\n",
     "            USING(officeCode)\n",
-    "            \"\"\")"
+    "            \"\"\")head()"
    ]
   },
   {
